@@ -1,5 +1,17 @@
 2006-10-19  Wim Taymans  <wim@fluendo.com>
 
+	* src/com/fluendo/jst/Pipeline.java: (Pipeline), (Pipeline.doSeek):
+	Improve handling of seek wrt state changes and errors.
+
+	* src/com/fluendo/player/Cortado.java: (Cortado),
+	(Cortado.getParameterInfo), (Cortado.init), (Cortado.run),
+	(Cortado.handleMessage), (Cortado.newState), (Cortado.newSeek),
+	(Cortado.start):
+	Add autoPlay option.
+	Simplify state management a little.
+
+2006-10-19  Wim Taymans  <wim@fluendo.com>
+
 	* src/com/fluendo/player/Status.java: (Status),
 	(Status.intersectButton2), (Status.intersectSeeker),
 	(Status.findComponent), (Status.mouseClicked),
